--- a/index.html
+++ b/index.html
@@ -2,76 +2,41 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>LEVEL 2 · TRIANGLE SIGNAL</title>
+<title>LEVEL 2 · TRIANGLE CHAOS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
-  font-family: "Courier New", monospace;
-  color: #9fe7ff;
-}
-
-/* === BACKGROUND (як level1) === */
-body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background:
-    radial-gradient(circle at 50% 50%, rgba(40,80,120,0.15), transparent 60%),
-    repeating-linear-gradient(
-      0deg,
-      rgba(255,255,255,0.015) 0px,
-      rgba(255,255,255,0.015) 1px,
-      transparent 2px,
-      transparent 4px
-    );
-  animation: noiseMove 6s linear infinite;
-  pointer-events: none;
-}
-
-@keyframes noiseMove {
-  0% { background-position: 0 0, 0 0; }
-  100% { background-position: 0 0, 0 400px; }
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  background:#000;
+  overflow:hidden;
+  font-family:"Courier New", monospace;
+  color:#9fe7ff;
 }
 
 canvas {
-  position: fixed;
-  inset: 0;
-  z-index: 0;
-}
-
-/* === WRAPPER === */
-.wrapper {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
+  position:fixed;
+  inset:0;
 }
 
 /* === SYSTEM TEXT (як level1) === */
 .system-line {
-  font-size: 12px;
-  letter-spacing: 2px;
-  opacity: 0.55;
-  text-decoration: none;
-  color: #9fe7ff;
-  transition: opacity 0.3s ease;
+  position:absolute;
+  bottom:24px;
+  left:50%;
+  transform:translateX(-50%);
+  font-size:12px;
+  letter-spacing:2px;
+  opacity:0.55;
+  color:#9fe7ff;
+  text-decoration:none;
+  z-index:5;
+  transition:opacity 0.3s;
 }
-
-.system-line:hover {
-  opacity: 1;
-}
+.system-line:hover { opacity:1; }
 </style>
 </head>
 
@@ -79,64 +44,116 @@ canvas {
 
 <canvas id="c"></canvas>
 
-<div class="wrapper">
-  <!-- Анімація -->
-  <div></div>
-
-  <!-- system1 — перший ряд нового рівня -->
-  <a class="system-line" href="https://lavandaaudit.github.io/test3/" target="_blank">
-    system1
-  </a>
-</div>
+<a class="system-line" href="https://lavandaaudit.github.io/test3/" target="_blank">
+  system1
+</a>
 
 <script>
 const canvas = document.getElementById("c");
 const ctx = canvas.getContext("2d");
 
-function resize() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+function resize(){
+  canvas.width = innerWidth;
+  canvas.height = innerHeight;
 }
 window.addEventListener("resize", resize);
 resize();
 
+/* === ЗІРКИ (як level1) === */
+const stars = [];
+for(let i=0;i<320;i++){
+  stars.push({
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    r:Math.random()*1.4+0.3,
+    a:Math.random()*0.5+0.2,
+    t:Math.random()*Math.PI*2,
+    s:Math.random()*0.02+0.005
+  });
+}
+
+/* === TIME === */
 let t = 0;
 
-function drawTriangle(cx, cy, size, rotation) {
+/* === DRAW HELPERS === */
+function triangle(cx,cy,r,rot){
   ctx.beginPath();
-  for (let i = 0; i < 3; i++) {
-    const a = rotation + i * (Math.PI * 2 / 3);
-    const x = cx + Math.cos(a) * size;
-    const y = cy + Math.sin(a) * size;
-    i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+  for(let i=0;i<3;i++){
+    const a = rot + i*Math.PI*2/3;
+    const x = cx + Math.cos(a)*r;
+    const y = cy + Math.sin(a)*r;
+    i===0?ctx.moveTo(x,y):ctx.lineTo(x,y);
   }
   ctx.closePath();
 }
 
-function loop() {
-  t += 0.01;
+function polygon(cx,cy,r,n,rot){
+  ctx.beginPath();
+  for(let i=0;i<n;i++){
+    const a = rot + i*Math.PI*2/n;
+    const x = cx + Math.cos(a)*r;
+    const y = cy + Math.sin(a)*r;
+    i===0?ctx.moveTo(x,y):ctx.lineTo(x,y);
+  }
+  ctx.closePath();
+}
 
-  ctx.fillStyle = "rgba(0,0,0,0.08)";
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
+/* === LOOP === */
+function loop(){
+  t+=0.01;
 
-  const cx = canvas.width / 2;
-  const cy = canvas.height / 2;
+  ctx.fillStyle="rgba(0,0,0,0.08)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  const pulse = Math.sin(t * 2) * 0.5 + 0.5;
-  const size = 90 + pulse * 40;
-  const glow = 0.2 + pulse * 0.3;
+  /* === STARS === */
+  stars.forEach(s=>{
+    s.t+=s.s;
+    const tw = Math.sin(s.t)*0.25;
+    ctx.fillStyle=`rgba(220,235,255,${s.a+tw})`;
+    ctx.fillRect(s.x,s.y,s.r,s.r);
+  });
 
-  // Outer glow
-  drawTriangle(cx, cy, size * 1.3, t * 0.4);
-  ctx.strokeStyle = `rgba(120,220,255,${glow * 0.25})`;
-  ctx.lineWidth = 6;
+  const cx = canvas.width/2;
+  const cy = canvas.height/2;
+
+  const pulse = Math.sin(t*2)*0.5+0.5;
+
+  /* === TRIANGLE CORE === */
+  const base = 90 + pulse*40;
+
+  triangle(cx,cy,base,t*0.6);
+  ctx.strokeStyle=`rgba(140,240,255,${0.6})`;
+  ctx.lineWidth=1.6;
   ctx.stroke();
 
-  // Core triangle
-  drawTriangle(cx, cy, size, -t * 0.6);
-  ctx.strokeStyle = `rgba(160,240,255,${0.6 + pulse * 0.3})`;
-  ctx.lineWidth = 1.5;
+  /* === INNER TRIANGLE === */
+  triangle(cx,cy,base*0.6,-t*0.9);
+  ctx.strokeStyle=`rgba(255,180,120,${0.5})`;
+  ctx.lineWidth=1;
   ctx.stroke();
+
+  /* === OUTER GLOW TRIANGLE === */
+  triangle(cx,cy,base*1.4,t*0.2);
+  ctx.strokeStyle=`rgba(120,220,255,${0.15+pulse*0.2})`;
+  ctx.lineWidth=5;
+  ctx.stroke();
+
+  /* === ROTATING POLYGON === */
+  polygon(cx,cy,base*1.9,5,-t*0.3);
+  ctx.strokeStyle=`rgba(180,120,255,${0.12})`;
+  ctx.lineWidth=1;
+  ctx.stroke();
+
+  /* === RADIAL LINES === */
+  ctx.strokeStyle=`rgba(200,255,255,0.05)`;
+  ctx.lineWidth=0.5;
+  for(let i=0;i<6;i++){
+    const a = t*0.4+i*Math.PI*2/6;
+    ctx.beginPath();
+    ctx.moveTo(cx,cy);
+    ctx.lineTo(cx+Math.cos(a)*base*2.2,cy+Math.sin(a)*base*2.2);
+    ctx.stroke();
+  }
 
   requestAnimationFrame(loop);
 }
