--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>LEVEL 2 · TRIANGLE CHAOS</title>
+<title>LEVEL 2 · SYSTEM SIGNAL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -22,21 +22,25 @@ canvas {
   inset:0;
 }
 
-/* === SYSTEM TEXT (як level1) === */
-.system-line {
-  position:absolute;
-  bottom:24px;
-  left:50%;
-  transform:translateX(-50%);
-  font-size:12px;
-  letter-spacing:2px;
-  opacity:0.55;
-  color:#9fe7ff;
-  text-decoration:none;
-  z-index:5;
-  transition:opacity 0.3s;
+/* === SYSTEM TEXT (ТОЧНА КОПІЯ LEVEL1) === */
+#system {
+  position: absolute;
+  bottom: 22px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 11px;
+  letter-spacing: 2px;
+  opacity: 0.6;
+  color: #9fe7ff;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  cursor: pointer;
+  z-index: 10;
+  transition: opacity 0.3s ease;
 }
-.system-line:hover { opacity:1; }
+#system:hover {
+  opacity: 1;
+}
 </style>
 </head>
 
@@ -44,7 +48,8 @@ canvas {
 
 <canvas id="c"></canvas>
 
-<a class="system-line" href="https://lavandaaudit.github.io/test3/" target="_blank">
+<!-- SYSTEM ROW (копія radio) -->
+<a id="system" href="https://lavandaaudit.github.io/test3/" target="_blank">
   system1
 </a>
 
@@ -59,101 +64,88 @@ function resize(){
 window.addEventListener("resize", resize);
 resize();
 
-/* === ЗІРКИ (як level1) === */
+/* === STARS (як level1) === */
 const stars = [];
-for(let i=0;i<320;i++){
+for(let i=0;i<340;i++){
   stars.push({
-    x:Math.random()*canvas.width,
-    y:Math.random()*canvas.height,
-    r:Math.random()*1.4+0.3,
-    a:Math.random()*0.5+0.2,
-    t:Math.random()*Math.PI*2,
-    s:Math.random()*0.02+0.005
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    s: Math.random()*1.4+0.3,
+    a: Math.random()*0.5+0.25,
+    t: Math.random()*Math.PI*2,
+    v: Math.random()*0.015+0.004
   });
 }
 
-/* === TIME === */
 let t = 0;
 
-/* === DRAW HELPERS === */
-function triangle(cx,cy,r,rot){
+/* === DRAW SHAPES === */
+function triangle(cx, cy, r, rot) {
   ctx.beginPath();
-  for(let i=0;i<3;i++){
-    const a = rot + i*Math.PI*2/3;
-    const x = cx + Math.cos(a)*r;
-    const y = cy + Math.sin(a)*r;
-    i===0?ctx.moveTo(x,y):ctx.lineTo(x,y);
+  for (let i = 0; i < 3; i++) {
+    const a = rot + i * Math.PI * 2 / 3;
+    const x = cx + Math.cos(a) * r;
+    const y = cy + Math.sin(a) * r;
+    i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
   }
   ctx.closePath();
 }
 
-function polygon(cx,cy,r,n,rot){
+function polygon(cx, cy, r, n, rot) {
   ctx.beginPath();
-  for(let i=0;i<n;i++){
-    const a = rot + i*Math.PI*2/n;
-    const x = cx + Math.cos(a)*r;
-    const y = cy + Math.sin(a)*r;
-    i===0?ctx.moveTo(x,y):ctx.lineTo(x,y);
+  for (let i = 0; i < n; i++) {
+    const a = rot + i * Math.PI * 2 / n;
+    const x = cx + Math.cos(a) * r;
+    const y = cy + Math.sin(a) * r;
+    i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
   }
   ctx.closePath();
 }
 
 /* === LOOP === */
 function loop(){
-  t+=0.01;
+  t += 0.01;
 
-  ctx.fillStyle="rgba(0,0,0,0.08)";
+  ctx.fillStyle = "rgba(0,0,0,0.07)";
   ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  /* === STARS === */
+  /* STARS */
   stars.forEach(s=>{
-    s.t+=s.s;
+    s.t += s.v;
     const tw = Math.sin(s.t)*0.25;
-    ctx.fillStyle=`rgba(220,235,255,${s.a+tw})`;
-    ctx.fillRect(s.x,s.y,s.r,s.r);
+    ctx.fillStyle = `rgba(220,235,255,${s.a+tw})`;
+    ctx.fillRect(s.x, s.y, s.s, s.s);
   });
 
   const cx = canvas.width/2;
   const cy = canvas.height/2;
 
   const pulse = Math.sin(t*2)*0.5+0.5;
+  const base = 85 + pulse*45;
 
-  /* === TRIANGLE CORE === */
-  const base = 90 + pulse*40;
-
+  /* CORE TRIANGLE */
   triangle(cx,cy,base,t*0.6);
-  ctx.strokeStyle=`rgba(140,240,255,${0.6})`;
-  ctx.lineWidth=1.6;
+  ctx.strokeStyle = "rgba(140,240,255,0.7)";
+  ctx.lineWidth = 1.4;
   ctx.stroke();
 
-  /* === INNER TRIANGLE === */
-  triangle(cx,cy,base*0.6,-t*0.9);
-  ctx.strokeStyle=`rgba(255,180,120,${0.5})`;
-  ctx.lineWidth=1;
+  /* INNER TRIANGLE */
+  triangle(cx,cy,base*0.55,-t*0.9);
+  ctx.strokeStyle = "rgba(255,190,140,0.45)";
+  ctx.lineWidth = 1;
   ctx.stroke();
 
-  /* === OUTER GLOW TRIANGLE === */
-  triangle(cx,cy,base*1.4,t*0.2);
-  ctx.strokeStyle=`rgba(120,220,255,${0.15+pulse*0.2})`;
-  ctx.lineWidth=5;
+  /* OUTER GLOW */
+  triangle(cx,cy,base*1.4,t*0.25);
+  ctx.strokeStyle = `rgba(120,220,255,${0.15+pulse*0.25})`;
+  ctx.lineWidth = 5;
   ctx.stroke();
 
-  /* === ROTATING POLYGON === */
+  /* POLYGON RING */
   polygon(cx,cy,base*1.9,5,-t*0.3);
-  ctx.strokeStyle=`rgba(180,120,255,${0.12})`;
-  ctx.lineWidth=1;
+  ctx.strokeStyle = "rgba(180,140,255,0.12)";
+  ctx.lineWidth = 1;
   ctx.stroke();
-
-  /* === RADIAL LINES === */
-  ctx.strokeStyle=`rgba(200,255,255,0.05)`;
-  ctx.lineWidth=0.5;
-  for(let i=0;i<6;i++){
-    const a = t*0.4+i*Math.PI*2/6;
-    ctx.beginPath();
-    ctx.moveTo(cx,cy);
-    ctx.lineTo(cx+Math.cos(a)*base*2.2,cy+Math.sin(a)*base*2.2);
-    ctx.stroke();
-  }
 
   requestAnimationFrame(loop);
 }
