--- a/index.html
+++ b/index.html
@@ -5,33 +5,120 @@
 <title>GEOMETRIC CHAOS · CYBER GRID</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-html, body { margin:0; padding:0; background:#000; overflow:hidden; height:100%; font-family:'Courier New', monospace; color:#0af; }
+html, body {
+  margin:0;
+  padding:0;
+  background:#000;
+  overflow:hidden;
+  height:100%;
+  font-family:'Courier New', monospace;
+  color:#0af;
+}
 canvas { display:block; }
-#hud { position:absolute; top:16px; left:16px; font-size:13px; opacity:0.7; pointer-events:none; letter-spacing:1px; }
-#data { 
-  position:absolute; 
-  top:50px; 
-  left:16px; 
-  font-size:10px; 
-  opacity:0.6; 
-  pointer-events:none; 
-  max-width:400px; 
-  line-height:1.4; 
+
+#hud {
+  position:absolute;
+  top:16px;
+  left:16px;
+  font-size:13px;
+  opacity:0.7;
+  pointer-events:none;
+  letter-spacing:1px;
+  z-index:10;
+}
+
+#data {
+  position:absolute;
+  top:50px;
+  left:16px;
+  font-size:10px;
+  opacity:0.6;
+  pointer-events:none;
+  max-width:400px;
+  line-height:1.4;
   z-index: 5;
 }
+
 #data .real { color:#0f0; font-weight:bold; }
 #data .fallback { color:#888; }
 #data .warning { color:#ff0; }
-#clock { position:absolute; bottom:16px; right:16px; font-size:11px; opacity:0.45; color:#6cf; text-align:right; pointer-events:none; line-height:1.3; }
-#status { position:absolute; top:40px; left:16px; font-size:11px; opacity:0.6; color:#0af; z-index: 5; }
+
+#clock {
+  position:absolute;
+  bottom:16px;
+  right:16px;
+  font-size:11px;
+  opacity:0.45;
+  color:#6cf;
+  text-align:right;
+  pointer-events:none;
+  line-height:1.3;
+  z-index:10;
+}
+
+#status {
+  position:absolute;
+  top:40px;
+  left:16px;
+  font-size:11px;
+  opacity:0.6;
+  color:#0af;
+  z-index: 5;
+}
+
+/* Додано: великий №2 по центру */
+#section-number {
+  position: fixed;
+  inset: 0;
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  font-size: 42vw;
+  font-weight: 900;
+  color: #0a0a0a;
+  user-select: none;
+  pointer-events: none;
+  z-index: 1;
+  line-height: 0.75;
+  text-shadow: 0 0 60px #000;
+}
+
+/* Додано: system1 внизу по центру */
+#system-link {
+  position: fixed;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 22px;
+  color: #0af;
+  opacity: 0.75;
+  cursor: pointer;
+  z-index: 12;
+  text-decoration: underline;
+  letter-spacing: 1px;
+  transition: all 0.3s;
+}
+
+#system-link:hover {
+  opacity: 1;
+  color: #0ff;
+  text-shadow: 0 0 12px #0ff;
+}
 </style>
 </head>
 <body>
+
+<div id="section-number">№2</div>
+
 <div id="hud">GEOMETRIC CHAOS — CYBER GRID</div>
 <div id="status"></div>
 <div id="data">ініціалізація...</div>
 <div id="clock">—</div>
+
+<div id="system-link">system1</div>
+
 <canvas id="c"></canvas>
+
 <script>
 const canvas = document.getElementById('c');
 const ctx = canvas.getContext('2d');
@@ -39,8 +126,12 @@ const dataDiv = document.getElementById('data');
 const clockDiv = document.getElementById('clock');
 const statusDiv = document.getElementById('status');
 
-function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
-window.addEventListener('resize', resize); resize();
+function resize() { 
+  canvas.width = window.innerWidth; 
+  canvas.height = window.innerHeight; 
+}
+window.addEventListener('resize', resize); 
+resize();
 
 const startTime = Date.now();
 
@@ -57,22 +148,27 @@ function updateClock() {
   const now = new Date();
   clockDiv.innerHTML = `${String(now.getHours()).padStart(2,'0')}:${String(now.getMinutes()).padStart(2,'0')}:${String(now.getSeconds()).padStart(2,'0')}<br>${formatRelativeTime(Date.now() - startTime)}`;
 }
-setInterval(updateClock, 1000); updateClock();
+setInterval(updateClock, 1000); 
+updateClock();
 
 // Зірки
 const stars = [];
 for (let i = 0; i < 300; i++) {
-  stars.push({x: Math.random()*canvas.width, y: Math.random()*canvas.height, size: Math.random()*1.2+0.4, baseAlpha: Math.random()*0.4+0.25, twinkle: Math.random()*0.015+0.006});
+  stars.push({
+    x: Math.random()*canvas.width, 
+    y: Math.random()*canvas.height, 
+    size: Math.random()*1.2+0.4, 
+    baseAlpha: Math.random()*0.4+0.25, 
+    twinkle: Math.random()*0.015+0.006
+  });
 }
 
 // Дані
 let realData = {seismic:0.5,magnetic:0.5,atmosphere_wind:0.5,atmosphere_pressure:0.5,atmosphere_temp:0.5,ocean:0.5,solar_radiation:0.5,solar_wind:0.5,precipitation:0.5,chaos:0.5};
 let dataHistory = {}; Object.keys(realData).forEach(k=>dataHistory[k]=[]);
 let sources = {};
-
 let solarIndices = {f107:120,kp:2.0,ap:12,dst:-15,ssn:85,xray:-6.5,proton:0.3,electron:150,bz:-2.5,density:5.2};
 let solarHistory = {}; Object.keys(solarIndices).forEach(k=>solarHistory[k]=[]);
-
 let earthEnvData = {air_quality_pm25:15,air_quality_aqi:45,co:0.4,no2:25,o3:40,so2:10,uv_index:3.5,humidity:65,cloud_cover:45,visibility:12};
 let earthEnvHistory = {}; Object.keys(earthEnvData).forEach(k=>earthEnvHistory[k]=[]);
 
@@ -85,13 +181,20 @@ const blobs = [
   {param:'solar_wind',color:'rgba(200,120,255,',phase:6.0,targetSize:6,targetAlpha:0.7},
   {param:'precipitation',color:'rgba(100,220,255,',phase:7.2,targetSize:6,targetAlpha:0.7}
 ];
-blobs.forEach(b=>{b.angle=Math.random()*Math.PI*2;b.radius=60+Math.random()*50;b.currentSize=b.targetSize;b.currentAlpha=b.targetAlpha;b.currentDist=b.radius;});
+blobs.forEach(b=>{
+  b.angle=Math.random()*Math.PI*2;
+  b.radius=60+Math.random()*50;
+  b.currentSize=b.targetSize;
+  b.currentAlpha=b.targetAlpha;
+  b.currentDist=b.radius;
+});
 
 function lerp(a,b,t){return a+(b-a)*t;}
 
-// Fetch даних (оновлення раз на хвилину)
+// Fetch даних
 async function fetchRealPlanetData(){
-  statusDiv.innerHTML='оновлення...'; let loaded=0;
+  statusDiv.innerHTML='оновлення...'; 
+  let loaded=0;
   const proxy='https://corsproxy.io/?';
   try{
     const weatherUrl='https://api.open-meteo.com/v1/forecast?latitude=50.45&longitude=30.52&current=temperature_2m,relative_humidity_2m,precipitation,cloud_cover,wind_speed_10m,surface_pressure,shortwave_radiation,uv_index,visibility';
@@ -156,20 +259,35 @@ async function fetchRealPlanetData(){
     }catch(e){console.warn('Kp failed',e);}
 
     Object.keys(realData).forEach(k=>{if(k!=='chaos'){dataHistory[k].push(realData[k]);if(dataHistory[k].length>80)dataHistory[k].shift();}});
-    let vars=[]; Object.keys(dataHistory).forEach(k=>{if(k==='chaos')return; const h=dataHistory[k];if(h.length<2)return; const mean=h.reduce((a,b)=>a+b,0)/h.length; const varnce=h.reduce((a,b)=>a+(b-mean)**2,0)/h.length; vars.push(Math.sqrt(varnce));});
+    let vars=[]; 
+    Object.keys(dataHistory).forEach(k=>{
+      if(k==='chaos') return; 
+      const h=dataHistory[k];
+      if(h.length<2) return; 
+      const mean=h.reduce((a,b)=>a+b,0)/h.length;
+      const varnce=h.reduce((a,b)=>a+(b-mean)**2,0)/h.length;
+      vars.push(Math.sqrt(varnce));
+    });
     realData.chaos=vars.length?Math.min(1,vars.reduce((a,b)=>a+b,0)/vars.length*10):0.5;
 
-    blobs.forEach(b=>{const v=realData[b.param]||0.5;b.targetSize=4+v*14;b.targetAlpha=0.3+v*0.6;b.targetDist=70+v*80;});
+    blobs.forEach(b=>{
+      const v=realData[b.param]||0.5;
+      b.targetSize=4+v*14;
+      b.targetAlpha=0.3+v*0.6;
+      b.targetDist=70+v*80;
+    });
 
     let html='';
     Object.keys(realData).forEach(k=>{
       let cls='fallback';
-      if(sources[k]||k==='chaos')cls='real';
-      else if(k!=='chaos')cls='warning';
+      if(sources[k]||k==='chaos') cls='real';
+      else if(k!=='chaos') cls='warning';
       html+=`${k.padEnd(20,' ')} <span class="${cls}">${realData[k].toFixed(3)}</span><br>`;
     });
     html+='<br>--- Сонячні індекси ---<br>';
-    Object.keys(solarIndices).forEach(k=>{html+=`${k.padEnd(20,' ')} <span class="real">${solarIndices[k].toFixed(2)}</span><br>`;});
+    Object.keys(solarIndices).forEach(k=>{
+      html+=`${k.padEnd(20,' ')} <span class="real">${solarIndices[k].toFixed(2)}</span><br>`;
+    });
     html+='<br>--- Якість повітря / Погода ---<br>';
     Object.keys(earthEnvData).forEach(k=>{
       let cls=sources.air_quality||sources.weather?'real':'warning';
@@ -177,17 +295,20 @@ async function fetchRealPlanetData(){
     });
     dataDiv.innerHTML=html;
     statusDiv.innerHTML=loaded>0?'оновлено':'';
-  }catch(e){console.error(e);statusDiv.innerHTML='';}
+  }catch(e){
+    console.error(e);
+    statusDiv.innerHTML='';
+  }
 }
 fetchRealPlanetData();
 setInterval(fetchRealPlanetData,60000);
 
-// Графік 4 — Загальний (найвищий)
+// ── функції малювання графіків (без змін) ──
+
 function drawCombinedGrid(){
   const margin=16, width=180, height=120;
   ctx.save();
   ctx.translate(margin,120);
-
   ctx.strokeStyle='rgba(180,180,180,0.2)'; ctx.lineWidth=1;
   for(let i=0;i<=5;i++){
     const y=i*height/5;
@@ -197,14 +318,12 @@ function drawCombinedGrid(){
     const x=i*width/5;
     ctx.beginPath();ctx.moveTo(x,0);ctx.lineTo(x,height);ctx.stroke();
   }
-
-  // Лінія 1 — Основні дані (зелена)
+  // Лінія 1 — Основні дані
   ctx.beginPath(); let f1=true;
   Object.keys(realData).forEach((k,i)=>{if(k==='chaos')return; const val=realData[k]; const x=i*(width/(Object.keys(realData).length-1)); const y=height-val*height;
     f1?ctx.moveTo(x,y):ctx.lineTo(x,y); f1=false;});
   ctx.strokeStyle='rgba(0,255,180,0.7)'; ctx.lineWidth=1.5; ctx.stroke();
-
-  // Лінія 2 — Сонячні (жовта)
+  // Лінія 2 — Сонячні
   ctx.beginPath(); let f2=true;
   Object.keys(solarIndices).forEach((k,i)=>{let val=solarIndices[k];
     if(k==='f107')val=Math.min(1,val/300);else if(k==='kp')val=val/9;else if(k==='ap')val=Math.min(1,val/400);
@@ -214,8 +333,7 @@ function drawCombinedGrid(){
     const x=i*(width/(Object.keys(solarIndices).length-1)); const y=height-val*height;
     f2?ctx.moveTo(x,y):ctx.lineTo(x,y); f2=false;});
   ctx.strokeStyle='rgba(255,220,80,0.7)'; ctx.lineWidth=1.5; ctx.stroke();
-
-  // Лінія 3 — Повітря/погода (блакитно-зелена)
+  // Лінія 3 — Повітря/погода
   ctx.beginPath(); let f3=true;
   Object.keys(earthEnvData).forEach((k,i)=>{let val=earthEnvData[k];
     if(k.includes('pm25'))val=Math.min(1,val/100);else if(k==='air_quality_aqi')val=Math.min(1,val/500);
@@ -225,11 +343,9 @@ function drawCombinedGrid(){
     const x=i*(width/(Object.keys(earthEnvData).length-1)); const y=height-val*height;
     f3?ctx.moveTo(x,y):ctx.lineTo(x,y); f3=false;});
   ctx.strokeStyle='rgba(80,255,220,0.7)'; ctx.lineWidth=1.5; ctx.stroke();
-
   ctx.restore();
 }
 
-// Графік 1 — Основні дані
 function drawLeftGrid(){
   const margin=16,width=180,height=120;
   ctx.save(); ctx.translate(margin,120+height+20);
@@ -246,7 +362,6 @@ function drawLeftGrid(){
   ctx.restore();
 }
 
-// Графік 2 — Сонячні індекси
 function drawSolarGrid(){
   const margin=16,width=180,height=120;
   ctx.save(); ctx.translate(margin,120+(height+20)*2);
@@ -264,13 +379,12 @@ function drawSolarGrid(){
     f?ctx.moveTo(x,y):ctx.lineTo(x,y);f=false;});
   ctx.strokeStyle='rgba(255,220,80,0.7)';ctx.lineWidth=2;ctx.stroke();
   keys.forEach((k,i)=>{let val=solarIndices[k];
-    if(k==='f107')val=Math.min(1,val/300);else if(k==='kp')val=val/9; // ... інші нормалізації за потребою
+    if(k==='f107')val=Math.min(1,val/300);else if(k==='kp')val=val/9;
     const x=i*(width/(keys.length-1));const y=height-val*height;
     ctx.beginPath();ctx.arc(x,y,3,0,Math.PI*2);ctx.fillStyle='rgba(255,220,80,0.9)';ctx.fill();});
   ctx.restore();
 }
 
-// Графік 3 — Якість повітря / додаткова погода
 function drawEarthEnvGrid(){
   const margin=16,width=180,height=120;
   ctx.save(); ctx.translate(margin,120+(height+20)*3);
@@ -288,7 +402,7 @@ function drawEarthEnvGrid(){
     f?ctx.moveTo(x,y):ctx.lineTo(x,y);f=false;});
   ctx.strokeStyle='rgba(0,255,120,0.7)';ctx.lineWidth=2;ctx.stroke();
   keys.forEach((k,i)=>{let val=earthEnvData[k];
-    if(k.includes('pm25'))val=Math.min(1,val/100); // інші нормалізації
+    if(k.includes('pm25'))val=Math.min(1,val/100);
     const x=i*(width/(keys.length-1));const y=height-val*height;
     ctx.beginPath();ctx.arc(x,y,3,0,Math.PI*2);ctx.fillStyle='rgba(0,255,120,0.9)';ctx.fill();});
   ctx.restore();
@@ -304,14 +418,12 @@ function loop(){
   t+=0.016;
   ctx.fillStyle='rgba(0,0,0,0.08)'; ctx.fillRect(0,0,canvas.width,canvas.height);
   const chaos=realData.chaos, cx=canvas.width/2, cy=canvas.height/2;
-
   const starMod=1-chaos*0.3;
   stars.forEach(s=>{
     const tw=Math.sin(t*s.twinkle*12+s.x*0.008)*0.18*starMod;
     ctx.fillStyle=`rgba(220,235,255,${Math.max(0.08,s.baseAlpha+tw).toFixed(3)})`;
     ctx.fillRect(s.x,s.y,s.size,s.size);
   });
-
   const gridSpacing=30;
   for(let gx=0;gx<canvas.width;gx+=gridSpacing){
     for(let gy=0;gy<canvas.height;gy+=gridSpacing){
@@ -321,7 +433,6 @@ function loop(){
       ctx.strokeStyle='rgba(180,100,255,0.03)';ctx.lineWidth=1;ctx.stroke();
     }
   }
-
   for(let s=0;s<4;s++){
     ctx.beginPath();
     for(let i=0;i<150;i++){
@@ -334,7 +445,6 @@ function loop(){
     ctx.strokeStyle=`rgba(255,${100+s*40},${50+s*30},${0.05+realData.solar_wind*0.15})`;
     ctx.lineWidth=1+s*0.5; ctx.stroke();
   }
-
   formulaObjs.forEach(f=>{
     f.alpha=Math.sin(t*0.5+f.phase)*0.5+0.5;
     ctx.fillStyle=`rgba(180,255,200,${f.alpha*0.25})`;
@@ -342,7 +452,6 @@ function loop(){
     ctx.fillText(f.text,f.x+Math.sin(t+f.phase)*20,f.y+Math.cos(t+f.phase)*15);
   });
 
-  // Усі графіки підключені
   drawCombinedGrid();
   drawLeftGrid();
   drawSolarGrid();
@@ -365,6 +474,11 @@ function loop(){
   requestAnimationFrame(loop);
 }
 loop();
+
+// ── Відкриття посилання при кліку на system1 ──
+document.getElementById('system-link').addEventListener('click', () => {
+  window.open('https://lavandaaudit.github.io/indicator-100-live-/', '_blank', 'noopener,noreferrer');
+});
 </script>
 </body>
 </html>
